--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6",
     "web-vitals": "^2.1.4"
   },
