--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leaflet": "^1.9.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
