--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "recharts": "^2.15.3",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6",
