add refund booking

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-select": "^5.10.1",
     "recharts": "^2.15.3",
     "redux": "^5.0.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.2.6",
     "web-vitals": "^2.1.4"
